Fix contact add

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Permission</string>
     <string name="contacts">Контакты</string>
+    <string name="authorities">pavlov.androdev.provider</string>
 </resources>
